--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title></title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> -->
-	<meta name="viewport" content="width=1281" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<!-- <meta name="viewport" content="width=1281" /> -->
 </head>
 <body class="page">
 	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -239,7 +239,7 @@
 					</div>
 				</div>
 			</div>
-			<<!-- div class="slider__bot slider__right">
+			<!-- <div class="slider__bot slider__right">
 				<span class="slider__tag"></span>
 				<div class="slider__controls slider__controls_team">
 					<button class="slider__arrow slider__arrow_prev"></button>
