--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<symbol id="altaura" viewBox="0 0 187.61 234.68">
 			<g>
-				<g>
+				<g>	
 					<path d="M75.37,130.15h36.35l-18.06-46-18.29,46ZM51.77,192.5H14.93L93.78,0l78.37,192.5H135.31l-12-30.82H63.81Z"/>
 					<path d="M10.23,224.13h6.15l-3.06-7.79-3.09,7.79Zm-4,10.55H0l11.73-28.52H15l11.58,28.52H20.37l-2-5.22H8.27Z"/>
 					<polygon points="35.94 234.68 29.71 234.68 41.44 206.16 44.74 206.16 56.31 234.68 50.08 234.68 43.03 216.47 35.94 234.68"/>
@@ -328,7 +328,7 @@
 					</div>
 				</div>
 				<div class="project__cell">
-					<a href="#" class="project__video">
+					<a href="#" class="project__video" data-video-id="9phzcwcvSdI">
 						<span class="project__video-wrap">
 							<span>Смотреть видеопрезентацию</span>
 							<button class="play"></button>
@@ -439,7 +439,7 @@
 	</div>
 
 	<div class="video">
-		<a href="#">
+		<a href="#" data-video-id="9phzcwcvSdI">
 			<span class="video__play">
 				<button class="play play_big"></button>
 				<span class="caption">Смотреть видео о нас</span>
@@ -516,6 +516,8 @@
 	<footer class="footer">
 		
 	</footer>
+
+	<div class="modal"></div>
 
 	<script src="js/libs.js"></script>
 	<script src="js/script.js"></script>
