--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					</div>
 				</div>
 				<div class="project__cell">
-					<a href="#" class="project__video" data-video-id="9phzcwcvSdI">
+					<a class="project__video" data-video-id="9phzcwcvSdI">
 						<span class="project__video-wrap">
 							<span>Смотреть видеопрезентацию</span>
 							<button class="play"></button>
@@ -439,7 +439,7 @@
 	</div>
 
 	<div class="video">
-		<a href="#" data-video-id="9phzcwcvSdI">
+		<a data-video-id="9phzcwcvSdI">
 			<span class="video__play">
 				<button class="play play_big"></button>
 				<span class="caption">Смотреть видео о нас</span>
