adaptive fix + animate scroll

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<div class="welcome">
 				<p class="welcome__date"><strong>20 - 27 мая</strong><span>Горный Алтай</span></p>
 				<p class="welcome__title caption">Лагерь осознанного отдыха для предпринимателей и рукововодителей</p>
-				<button class="btn">Стать участником</button>
+				<a href="#connect" class="btn">Стать участником</a>
 				<p>Атмосфера "как в детстве" <br>можно с семьей!</p>
 			</div>
 		</div>
@@ -456,21 +456,21 @@
 						<strong>Оптимум</strong>
 						<span class="strong strong_big">70 000 Р</span>
 						<p>* до 31 марта<br>при покупке 3-х мест</p>
-						<button class="btn">Забронировать</button>
+						<a href="#connect" class="btn">Забронировать</a>
 					</div>
 				</div>
 				<div class="pricing__price">
 					<div class="pricing__price-content">
 						<strong>Стандарт</strong>
 						<span class="strong strong_big">97 000 Р</span>
-						<button class="btn">Забронировать</button>
+						<a href="#connect" class="btn">Забронировать</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="connect">
+	<div class="connect" id="connect">
 		<div class="container">
 			<div class="connect__wrap">
 				<span class="caption">АЛТАЙ</span>
