safari svg fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<title></title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
@@ -82,7 +84,7 @@
 	<header class="header">
 		<div class="container">
 			<svg class="header__logo">
-				<use href="#altaura"/>
+				<use xlink:href="#altaura"/>
 			</svg>
 			<div class="welcome">
 				<p class="welcome__date"><strong>20 - 27 мая</strong><span>Горный Алтай</span></p>
@@ -226,7 +228,7 @@
 		<div class="slider slider_team">
 			<div class="slider__altaura">
 				<svg>
-					<use href="#altaura"/>
+					<use xlink:href="#altaura"/>
 				</svg>
 			</div>
 			<div class="slider__content slider__content_team">
@@ -299,7 +301,7 @@
 							<img src="img/project.jpg" alt="">
 						</div>
 						<svg>
-							<use href="#altaura"/>
+							<use xlink:href="#altaura"/>
 						</svg>
 					</div>
 				</div>
@@ -495,17 +497,17 @@
 				<div class="connect__web">
 					<a href="#">
 						<svg>
-							<use href="#fb"/>
+							<use xlink:href="#fb"/>
 						</svg>
 					</a>
 					<a href="#">
 						<svg>
-							<use href="#mail"/>
+							<use xlink:href="#mail"/>
 						</svg>
 					</a>
 					<a href="#">
 						<svg>
-							<use href="#instagram"/>
+							<use xlink:href="#instagram"/>
 						</svg>
 					</a>
 				</div>
