--- a/index.html
+++ b/index.html
@@ -428,6 +428,10 @@
 	<div class="pricing">
 		<div class="container">
 			<span class="caption">Цены</span>
+			<p class="pricing__special">
+				<strong>Специальное предложение!</strong><br>
+				При бронировании места в апреле действует рассрочка платежа на 2 месяца: 50% в апреле и 50% до 25 мая включительно.
+			</p>
 			<div class="pricing__block">
 				<div class="pricing__price">
 					<div class="pricing__price-content">
