--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<symbol id="altaura" viewBox="0 0 187.61 234.68">
 			<g>
-				<g>	
+				<g>
 					<path d="M75.37,130.15h36.35l-18.06-46-18.29,46ZM51.77,192.5H14.93L93.78,0l78.37,192.5H135.31l-12-30.82H63.81Z"/>
 					<path d="M10.23,224.13h6.15l-3.06-7.79-3.09,7.79Zm-4,10.55H0l11.73-28.52H15l11.58,28.52H20.37l-2-5.22H8.27Z"/>
 					<polygon points="35.94 234.68 29.71 234.68 41.44 206.16 44.74 206.16 56.31 234.68 50.08 234.68 43.03 216.47 35.94 234.68"/>
@@ -87,60 +87,86 @@
 				<use xlink:href="#altaura"/>
 			</svg>
 			<div class="welcome">
-				<p class="welcome__date"><strong>20 - 27 мая</strong><span>Горный Алтай</span></p>
-				<p class="welcome__title caption">Лагерь осознанного отдыха для предпринимателей и рукововодителей</p>
+				<p class="welcome__date"><strong>17, 18, 19 августа</strong><span>Горный Алтай</span></p>
+				<p class="welcome__title caption">Каждый день, события которые мы запланировали в нашем лагере,
+					будут заряжать и вдохновлять вас. Мы создали этот проект для того что бы вы получили энергию и мотивацию
+				двигать дальше.</p>
 				<a href="#connect" class="btn">Стать участником</a>
-				<p>Атмосфера "как в детстве" <br>можно с семьей!</p>
+				<!-- <p>Атмосфера "как в детстве" <br>можно с семьей!</p> -->
 			</div>
 		</div>
 	</header>
-		
+
+	<div class="slider slider_new">
+		<div class="slider__content">
+			<span class="slider__title">10 проблем, которые мы проработаем за <strong>3</strong> дня</span>
+			<div class="slider__content-slide"></div>
+			<div class="slider__b">
+				<span class="slider__tag"></span>
+				<div class="slider__controls">
+					<button class="slider__arrow slider__arrow_prev"></button>
+					<span class="slider__count"></span>
+					<button class="slider__arrow slider__arrow_next"></button>
+				</div>
+			</div>
+		</div>
+		<div class="slider__slides">
+			<div class="slider__slide slide">
+				<div class="slide__bg"></div>
+				<div class="slide__content">
+					<div class="slide__text">
+						<p>
+							Внутри вас живет постоянный конфликт, вы не можете сосредоточится на важном
+						</p>
+					</div>
+				</div>
+				<div class="slide__img">
+					<img src="../img/00.jpg">
+				</div>
+			</div>
+			<div class="slider__slide slide">
+				<div class="slide__bg"></div>
+				<div class="slide__content">
+					<div class="slide__text">
+						<p>
+							Внутри вас живет постоянный конфликт, вы не можете сосредоточится на важном
+						</p>
+					</div>
+				</div>
+				<div class="slide__img">
+					<img src="../img/slide.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="questions">
 		<div class="container">
-			<span class="caption">10 вопросов, которые мы решим за <strong>7</strong> дней</span>
-			<ul class="questions__list">
+			<span class="caption">Для того чтобы решить эти вопросы необходимо настроить <br>5 аур гармоничного развития личности</span>
+			<ul class="questions__list questions__list_counter">
 				<li class="questions__item">
-					<strong>СТЕКЛЯННЫЙ ПОТОЛОК</strong>
-					<p>Как выйти на новый уровень<br> развития бизнеса?</p>
+					<strong>Самооценка</strong>
+					<p>С Вами поработает стилист и научит гармонично подбирать цвета и фасоны, которые подходят именно Вам! Вы научитесь быть уверенной в себе</p>
 				</li>
 				<li class="questions__item">
-					<strong>СОМНЕНИЯ В СВОИХ СИЛАХ</strong>
-					<p>Как избавиться от «синдрома самозванца» и стать лучшим в своей сфере?</p>
+					<strong>Самореализация</strong>
+					<p>Фонд поддержки женщин предпринимателей и представительницы клуба расскажут как найти своё дело. У нас в гостях будут успешные женщины, которые смогли реализоваться как женщины и бизнес-леди, они готовы поделиться своими «фишками» с Вами!</p>
 				</li>
 				<li class="questions__item">
-					<strong>СТРЕСС, ДЕПРЕССИЯ</strong>
-					<p>Где взять энергию <br>для достижения целей?</p>
+					<strong>Семья</strong>
+					<p>специально для Вас мы пригласили в женский клуб тренера по  трансформационным играм, психолога, коуча, для того чтобы Вы могли проанализировать свою ситуацию и переосмыслить её.</p>
 				</li>
 				<li class="questions__item">
-					<strong>Лень</strong>
-					<p>Как не сойти с дистанции<br>по пути к мечте?</p>
+					<strong>Окружение</strong>
+					<p>это сам женский клуб, команда успешных, целеустремлённых и уверенных в себе женщин!</p>
 				</li>
 				<li class="questions__item">
-					<strong>ДОСТИГАТОРСТВО</strong>
-					<p>Как сделать выбор между «надо» и «хочу» <br>и научиться жить в потоке?</p>
+					<strong>Здоровье</strong>
+					<p>на площадке клуба ежедневно будет проходить оздоровительный комплекс- Йога, зумба, закаливание и это ещё не все! Все это на свежем воздухе в горах под шум горной реки Катуни!</p>
 				</li>
-				<li class="questions__item">
-					<strong>ПРОБЛЕМЫ В ЛИЧНЫХ ОТНОШЕНИЯХ</strong>
-					<p>Как совмещать карьеру<br>и личную жизнь?</p>
-				</li>
-				<li class="questions__item">
-					<strong>НЕТ ЦЕЛЕЙ</strong>
-					<p>Как прийти <br>к большим достижениям?</p>
-				</li>
-				<li class="questions__item">
-					<strong>ТУПИК, КРИЗИС</strong>
-					<p>Как превратить кризис<br>в точку роста?</p>
-				</li>
-				<li class="questions__item">
-					<strong>Страх</strong>
-					<p>Как решиться на <br>кардинальные перемены?</p>
-				</li>
-				<li class="questions__item">
-					<strong>НИЗКИЙ ДОХОД</strong>
-					<p>Можно ли хорошо зарабатывать, <br>занимаясь любимым делом?</p>
-				</li>
+
 			</ul>
-			<div class="questions__text">
+			<!-- <div class="questions__text">
 				<p class="caption">
 					Мы предлагаем разобраться с причинами,<br>
 					найти ответы и ресурсы, <br>
@@ -148,6 +174,51 @@
 					И это в формате отдыха
 				</p>
 				<span class="caption caption_big">Это возможно!</span>
+			</div> -->
+		</div>
+	</div>
+
+	<div class="slider slider_new">
+		<div class="slider__content">
+			<div class="slider__title">Вы станете лучшей версией себя!
+				<p>А именно:</p>
+			</div>
+			<div class="slider__content-slide"></div>
+			<div class="slider__b">
+				<span class="slider__tag"></span>
+				<div class="slider__controls">
+					<button class="slider__arrow slider__arrow_prev"></button>
+					<span class="slider__count"></span>
+					<button class="slider__arrow slider__arrow_next"></button>
+				</div>
+			</div>
+		</div>
+		<div class="slider__slides">
+			<div class="slider__slide slide">
+				<div class="slide__bg"></div>
+				<div class="slide__content">
+					<div class="slide__text">
+						<p>
+							Получите эмоциональный подъем, силы и энергию двигаться дальше
+						</p>
+					</div>
+				</div>
+				<div class="slide__img">
+					<img src="../img/00.jpg">
+				</div>
+			</div>
+			<div class="slider__slide slide">
+				<div class="slide__bg"></div>
+				<div class="slide__content">
+					<div class="slide__text">
+						<p>
+							Внутри вас живет постоянный конфликт, вы не можете сосредоточится на важном
+						</p>
+					</div>
+				</div>
+				<div class="slide__img">
+					<img src="../img/99.jpg">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -245,7 +316,7 @@
 		                    	Художник-иллюстратор, фрилансер, дизайнер. Победитель международных смотров и конкурсов <strong>Союза дизайнеров России</strong>. Имеет опыт преподавания. Проводит авторские мастер-классы и интенсивы, курсы онлайн и сотрудничает с проектом для любителей рисования со всей страны «Onlyart».
 							</p>
 							<p>
-								Юлия проведет для желающих творческие мастер-классы. Рисовать сможет каждый! Даже тот, кто ни разу не брал в руки кисть со времен окончания школы. За два часа вы сможете создать свою картину, которую приятно будет увезти домой, как воспоминание о днях, проведенных на Алтае.		
+								Юлия проведет для желающих творческие мастер-классы. Рисовать сможет каждый! Даже тот, кто ни разу не брал в руки кисть со времен окончания школы. За два часа вы сможете создать свою картину, которую приятно будет увезти домой, как воспоминание о днях, проведенных на Алтае.
 							</p>
 						</div>
 					</div>
@@ -264,7 +335,7 @@
 		                    	Художник-иллюстратор, фрилансер, дизайнер. Победитель международных смотров и конкурсов <strong>Союза дизайнеров России</strong>. Имеет опыт преподавания. Проводит авторские мастер-классы и интенсивы, курсы онлайн и сотрудничает с проектом для любителей рисования со всей страны «Onlyart».
 							</p>
 							<p>
-								Юлия проведет для желающих творческие мастер-классы. Рисовать сможет каждый! Даже тот, кто ни разу не брал в руки кисть со времен окончания школы. За два часа вы сможете создать свою картину, которую приятно будет увезти домой, как воспоминание о днях, проведенных на Алтае.		
+								Юлия проведет для желающих творческие мастер-классы. Рисовать сможет каждый! Даже тот, кто ни разу не брал в руки кисть со времен окончания школы. За два часа вы сможете создать свою картину, которую приятно будет увезти домой, как воспоминание о днях, проведенных на Алтае.
 							</p>
 						</div>
 					</div>
@@ -496,7 +567,7 @@
 	</div>
 
 	<footer class="footer">
-		
+
 	</footer>
 
 	<div class="modal"></div>
